[package]
name = "clickhouse_gdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["headers", "matched-path", "json"] }
axum-extra = "0.7.4"
axum-macros = "0.3.7"
tokio = { version = "1.27.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
indexmap = { version = "2.0.0", features = ["serde"] }
reqwest = "0.11.18"
schemars = "0.8.12"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
serde_with = "3.0.0"
clap = { version = "4.3.19", features = ["derive", "env"] }
init-tracing-opentelemetry = { version = "0.12.0", features = [
  "otlp",
  "tracing_subscriber_ext",
] }
axum-tracing-opentelemetry = "0.12.0"
tracing = "0.1.37"
tracing-opentelemetry-instrumentation-sdk = "0.12.0"
opentelemetry = "0.19.0"
opentelemetry-otlp = { version = "0.12.0", features = ["reqwest-client"] }
peg = "0.8.1"
openapi_type = "0.4.2"
openapiv3-visit = "0.3.0"
openapiv3 = "1.0.2"
